--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -272,6 +272,8 @@ crypto_libbitcoin_crypto_a_SOURCES = \
   crypto/scrypt.cpp \
   crypto/scrypt-sse2.cpp \
   crypto/scrypt.h \
+  crypto/scrypt-jane/scrypt-jane.c \
+  crypto/scrypt-jane/scrypt-jane.h \
   crypto/sha1.cpp \
   crypto/sha1.h \
   crypto/sha256.cpp \
